fix:update docker-compose.yaml v0